se modifico tamaño de fotos y botones del menu

--- a/index.html
+++ b/index.html
@@ -82,19 +82,19 @@
       </section>
       <section id="fotos">
         <h2>Fotos</h2>
-        <img src="casa-1.jpg" alt="pileta-1" width="200" />
-        <img src="casa-2.jpg" alt="pileta-2" width="200" />
-        <img src="casa-3.jpg" alt="durlock" width="200" />
-        <img src="casa-4.jpg" alt="casa playa" width="200" />
-        <img src="casa-5.jpg" alt="pergola" width="200" />
-        <img src="casa-6.jpg" alt="revestimiento" width="200" />
-        <img src="casa-7.jpg" alt="pergola-1" width="200" />
-        <img src="casa-9.jpg" alt="machimbre" width="200" />
-        <img src="casa.10.jpg" alt="cimientos" width="200" />
-        <img src="casa-11.jpg" alt="revestimento-1" width="200" />
-        <img src="casa-12.jpg" alt="casa-playa-1" width="200" />
-        <img src="casa-13.jpg" alt="pisos" width="200" />
-        <img src="casa-14.jpg" alt="colocacion-piedras" width="200" />
+        <img src="casa-1.jpg" alt="pileta-1" width="200px" />
+        <img src="casa-2.jpg" alt="pileta-2" width="200px" />
+        <img src="casa-3.jpg" alt="durlock" width="200px" />
+        <img src="casa-4.jpg" alt="casa playa" width="200px" />
+        <img src="casa-5.jpg" alt="pergola" width="200px" />
+        <img src="casa-6.jpg" alt="revestimiento" width="200px" />
+        <img src="casa-7.jpg" alt="pergola-1" width="200px" />
+        <img src="casa-9.jpg" alt="machimbre" width="200px" />
+        <img src="casa.10.jpg" alt="cimientos" width="200px" />
+        <img src="casa-11.jpg" alt="revestimento-1" width="200px" />
+        <img src="casa-12.jpg" alt="casa-playa-1" width="200px" />
+        <img src="casa-13.jpg" alt="pisos" width="200px" />
+        <img src="casa-14.jpg" alt="colocacion-piedras" width="200px" />
       </section>
       <section id="llamada-a-la-accion">
         <h2>Contactanos hoy</h2>
